--- a/about.html
+++ b/about.html
@@ -67,10 +67,12 @@
                                                 <li><a class="dropdown-item" href="multistore.html">Industries</a>
                                                 </li>
 
-                                                <li><a class="dropdown-item" href="omnichannel.html">Omni Channel</a></li>
+                                                <li><a class="dropdown-item" href="omnichannel.html">Omni Channel</a>
+                                                </li>
                                                 <li><a class="dropdown-item" href="#">Custom Application</a></li>
                                                 <li><a class="dropdown-item" href="#">Mobile Applilcation</a></li>
-                                                <li><a class="dropdown-item" href="#">Geolocation Based Ecommerce</a></li>
+                                                <li><a class="dropdown-item" href="#">Geolocation Based Ecommerce</a>
+                                                </li>
                                                 <li><a class="dropdown-item" href="#">Headless</a></li>
                                                 <!-- <li>
                                                     <hr class="dropdown-divider">
@@ -79,17 +81,21 @@
                                             </ul>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="industries.html">Industries</a>
+                                            <a class="nav-link active" aria-current="page"
+                                                href="industries.html">Industries</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="examples.html">Examples</a>
+                                            <a class="nav-link active" aria-current="page"
+                                                href="examples.html">Examples</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="about.html">About Us</a>
+                                            <a class="nav-link active" aria-current="page" href="about.html">About
+                                                Us</a>
                                         </li>
 
                                         <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="contact.html">Contact Us</a>
+                                            <a class="nav-link active" aria-current="page" href="contact.html">Contact
+                                                Us</a>
                                         </li>
 
 
@@ -106,15 +112,87 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="getstarted d-flex justify-content-end">
-                        <a href="contact.html"> <button class="btn btn-outline-success getstarted" type="submit">Get Started</button></a>
+                        <a href="contact.html"> <button class="btn btn-outline-success getstarted" type="submit">Get
+                                Started</button></a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="about_content"></section>
-    
+    <section class="about_content">
+        <div class="container">
+            <div class="about_us_heading text-center">
+                <h1>ECBEE</h1>
+                <p>Platform to transform Business owners across Industries to build their online stores to achieve their
+                    goal of wider reachability of their products</p>
+                <button>ASK FOR A DEMO</button>
+            </div>
+            <div class="row">
+                <div class="col-lg-7">
+                    <div class="about_us_content">
+                        <h4><b>We create the ultimate digital experience for the
+                                web and mobile applications</b></h4>
+                        <p>EcBee is an new-age <b>e-commerce</b> venture whose aim is to provide MSME ( micro-small and
+                            medium
+                            business) an affordable <b>Online Presence</b> to do business beyond boundaries. We make
+                            available
+                            an all-incluidve technology that is absolutely hassle free and intuitive.</p>
+                        <p>With a growing number of happy clients, EcBee ensures seamless transition and smooth handling
+                            of your own portal.</p>
+                        <p>We apply a well-tested framework to each project that allows us to complete web development
+                            and application projects within the required timeframe and budget without sacrificing
+                            features or functionality.</p>
+                    </div>
+                </div>
+                <div class="col-lg-5"></div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6"></div>
+                <div class="col-lg-6">
+                    <div class="about_us_content">
+                        <h4><b>We create the ultimate digital experience for the
+                                web and mobile applications</b></h4>
+                        <p>EcBee is an new-age <b>e-commerce</b> venture whose aim is to provide MSME ( micro-small and
+                            medium
+                            business) an affordable <b>Online Presence</b> to do business beyond boundaries. We make
+                            available
+                            an all-incluidve technology that is absolutely hassle free and intuitive.</p>
+                        <p>With a growing number of happy clients, EcBee ensures seamless transition and smooth handling
+                            of your own portal.</p>
+                        <p>We apply a well-tested framework to each project that allows us to complete web development
+                            and application projects within the required timeframe and budget without sacrificing
+                            features or functionality.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+
+                <div class="col-lg-6">
+                    <div class="about_us_content">
+                        <h4><b>We create the ultimate digital experience for the
+                                web and mobile applications</b></h4>
+                        <p>EcBee is an new-age <b>e-commerce</b> venture whose aim is to provide MSME ( micro-small and
+                            medium
+                            business) an affordable <b>Online Presence</b> to do business beyond boundaries. We make
+                            available
+                            an all-incluidve technology that is absolutely hassle free and intuitive.</p>
+                        <p>With a growing number of happy clients, EcBee ensures seamless transition and smooth handling
+                            of your own portal.</p>
+                        <p>We apply a well-tested framework to each project that allows us to complete web development
+                            and application projects within the required timeframe and budget without sacrificing
+                            features or functionality.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6"></div>
+            </div>
+
+
+
+        </div>
+
+    </section>
+
     <section class="footer pt-5 pb-5">
         <div class="container">
             <div class="row">
@@ -140,14 +218,14 @@
                                         aria-hidden="true"></i>Home</a></li>
                             <li><a href="b2b.html" class="text-decoration-none"><i class="fa fa-angle-right pb-3  me-2"
                                         aria-hidden="true"></i>Solutions</a></li>
-                            <li><a href="industries.html" class="text-decoration-none"><i class="fa fa-angle-right me-2 pb-3 "
-                                        aria-hidden="true"></i>Industries</a></li>
-                            <li><a href="examples.html" class="text-decoration-none"><i class="fa fa-angle-right me-2 pb-3 "
-                                        aria-hidden="true"></i>Examples</a></li>
-                            <li><a href="about.html" class="text-decoration-none"><i class="fa fa-angle-right me-2 pb-3 "
-                                        aria-hidden="true"></i>About Us</a></li>
-                            <li><a href="contact.html" class="text-decoration-none"><i class="fa fa-angle-right me-2 pb-3 "
-                                        aria-hidden="true"></i>Contact Us</a></li>
+                            <li><a href="industries.html" class="text-decoration-none"><i
+                                        class="fa fa-angle-right me-2 pb-3 " aria-hidden="true"></i>Industries</a></li>
+                            <li><a href="examples.html" class="text-decoration-none"><i
+                                        class="fa fa-angle-right me-2 pb-3 " aria-hidden="true"></i>Examples</a></li>
+                            <li><a href="about.html" class="text-decoration-none"><i
+                                        class="fa fa-angle-right me-2 pb-3 " aria-hidden="true"></i>About Us</a></li>
+                            <li><a href="contact.html" class="text-decoration-none"><i
+                                        class="fa fa-angle-right me-2 pb-3 " aria-hidden="true"></i>Contact Us</a></li>
                             <!-- <li><a href="#" class="text-decoration-none"><i class="fa fa-angle-right me-2 pb-3 "
                                         aria-hidden="true"></i>Privacy Policy</a></li> -->
                         </ul>
