--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-    <link rel="icon" type="image/png" sizes="48x48" href="./assests/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="60x60" href="./assests/logofav.svg">
     <script src="./js/index.js"></script>
     <script type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
