--- a/d2c.html
+++ b/d2c.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" type="image/png" sizes="48x48" href="./assests/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="60x60" href="./assests/logofav.svg">
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
@@ -230,7 +230,7 @@
         <div class="container">
             <div class="b2b_title text-center">
                 <div class="h3">
-                    Whatever Be Your D2C Strategy StoreHippo Has A Built-In Solution For Your Brand
+                    Whatever Be Your D2C Strategy ECBEE Has A Built-In Solution For Your Brand
                 </div>
                 <!-- <p>Grow your business with the most flexible B2B ecommerce platform designed for B2B, D2C and
                     Omnichannel commerce</p> -->
