updated b2b2c and D2c contents

--- a/b2b.html
+++ b/b2b.html
@@ -284,7 +284,7 @@
             </div>
             <div class="b2b_title text-center">
                 <h1>Why ECBEE for B2B Ecommerce Solutions</h1>
-                <p>One of the challenges faced in B2B is to handle multiple scenario contracts for various needs of the
+                <p style="text-indent:1rem">One of the challenges faced in B2B is to handle multiple scenario contracts for various needs of the
                     business customers. Our E-commerce platform <br>ensures the contractual obligations are met and the
                     day-to-day operations are carried over with ease and hassle-free business environment.</p>
 
@@ -299,7 +299,7 @@
                 <div class="col-lg-6">
                     <div class="b2b_info_right">
                         <h2>Order Processing</h2>
-                        <p>Our platform makes sure the orders received are processed in time and the users can
+                        <p style="text-indent:1rem">Our platform makes sure the orders received are processed in time and the users can
                             efficiently manage the orders with easy and manageable user interface that helps the order
                             processing progress from order received to delivery of goods to the customers in time. The
                             portal which we develop through our E-commerce platform handles repeated orders (from
@@ -316,7 +316,7 @@
                 <div class="col-lg-6">
                     <div class="b2b_info_right">
                         <h2>B2B payment Management</h2>
-                        <p>Our E-commerce platform allows Business owners to define the payment process for their
+                        <p style="text-indent:1rem">Our E-commerce platform allows Business owners to define the payment process for their
                             clients. Clients with established credit terms will have the options to raise purchase order
                             without getting directed to the payment process, and also allows the business owners
                             ensuring their clients are not crossing the pre-set credit limits to safeguard the business.
@@ -346,7 +346,7 @@
                 <div class="col-lg-6">
                     <div class="b2b_info_right">
                         <h2>Promotion Management</h2>
-                        <p>Our E-commerce platform is designed in such a way that the customer can have multiple
+                        <p style="text-indent:1rem">Our E-commerce platform is designed in such a way that the customer can have multiple
                             promotions for their customers to promote their products or brands. The various types of
                             promotions now available are customer promotion, category promotion, order promotion,
                             product promotion, registration promotion etc. The customer has the preference to come up
