--- a/b2b2c.html
+++ b/b2b2c.html
@@ -21,6 +21,7 @@
         rel="stylesheet">
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+    <link rel="stylesheet" href="./Css/b2b2c.css">
     <title>B2B2C</title>
 </head>
 
@@ -259,27 +260,32 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="b2b_info_right">
-                        <h2>B2B2C Aggregator Marketplace
+                        <h2>---------
                         </h2>
-                        <h4><b>B2B2C Model with sellers serving to end customers</b></h4>
-                        <p>Sell products directly to the end customers by building an aggregator platform where other
-                            businesses showcase and sell products under your brand name. Create your brand’s B2B2C
-                            online marketplace where end buyers can choose their preferred seller and order from them.
-                            Onboard other sellers as vendors to enable your B2C customers to compare, choose and buy
-                            from the dealer of their choice..</p>
+                        <h4>Setup your brand for growth, like never before with the B2B2C business model.</h4>
+                        <p>A perfect model to utilise your existing dealer and distribution network to build your brand
+                            and to
+                            reach the new customer base.</p>
                     </div>
                 </div>
 
 
                 <div class="col-lg-6">
                     <div class="b2b_info_right">
-                        <h2>B2B2C Multi Store Multi Dealer Network</h2>
-                        <h4><b>B2B2C Model with brand selling to other businesses (B2B) and retail customers (B2C)</b>
-                        </h4>
-                        <p>Build a multi store network with dedicated stores selling to B2B and B2C buyers and managed
-                            by a single central admin. Build your B2B2C ecommerce store where your customers can buy on
-                            your website or mobile apps. Fulfill the orders by routing the orders through nearest
-                            dealers or warehouses from customer location.</p>
+                        <!-- <h2>B2B2C Multi Store Multi Dealer Network</h2> -->
+                        <h2>-------------------------</h2>
+                        <!-- <h4><b>B2B2C Model with brand selling to other businesses (B2B) and retail customers (B2C)</b>
+                        </h4> -->
+                        <p style="text-indent:1rem">New online customers orders are directed to the local distributor to
+                            promote the brand as well as
+                            the loyalty with the existing dealer network. This B2B2C ensures cost of logistics is
+                            reduced
+                            along with quicker to deliver the product to the end customer.</p>
+                        <p style="text-indent:1rem">Encouraging the existing business network to participate and be part
+                            of various business
+                            clusters, to gain more advantage by means of increased gain or other benefits. This creates
+                            a
+                            healthy business relationship with our network by means of instant gratification.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -299,32 +305,47 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="b2b_info_right">
-                        <h2>B2B2C Hybrid Marketplace</h2>
-                        <h4><b>B2B2C business selling brand products along with ancillary products from other sellers
-                            </b></h4>
-                        <p>Sell your branded products in bulk as well as retail to your wholesale buyers and retail
-                            buyers. Create your horizontal B2B2C online marketplace to onboard sellers from related
-                            product verticals who pay a commission to you and sell their products to the end customers.
+                        <!-- <h2>B2B2C Hybrid Marketplace</h2> -->
+                        <h2>----------------</h2>
+                        <!-- <h4><b>B2B2C business selling brand products along with ancillary products from other sellers
+                            </b></h4> -->
+                        <p style="text-indent:1rem, ">Our Ecbee, e-commerce platform provides solution of having multiple logistics options that
+                            leverages both state level and pan India logistics network. This logistics solution ensures
+                            the
+                            product reaches the customer in time and without damage on any fragile items, the customer
+                            has
+                            order for.
                         </p>
+                        <p style="text-indent:1rem">This B2B2C solution combines the best of B2B and B2C to reach out to new buyers and sellers.
+                            This model helps you to design business strategies for no-holds-barred growth.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="b2b_info_right">
-                        <h2>Hyperlocal B2B2C Marketplace</h2>
-                        <h4><b>B2B2C marketplace catering to hyperlocal markets using local stores as vendors</b></h4>
-                        <p>Sell in location-specific markets by building your B2B2C hyperlocal marketplace. Onboard
-                            local stores as sellers on your marketplace platform and route the retail orders through the
-                            local stores nearest to your end customers’ locations.</p>
+                        <!-- <h2>Hyperlocal B2B2C Marketplace</h2> -->
+                        <h2>ECBEE'S  ----</h2>
+                        <!-- <h4><b>B2B2C marketplace catering to hyperlocal markets using local stores as vendors</b></h4> -->
+                        <p style="text-indent:1rem">Our model helps the business owners to partner with new retailers/sellers by offering them
+                            complete digital infrastructure</p>
+                        <div class="b2b_overview_right">
+                        <ul class="custom-list">
+                            <li>Combine different ancillary products or industries to scale up to new buyers.</li>
+                            <li>Gain loyal customers by offering convenience of buying through digital channels.</li>
+                            <li>Reduce overhead costs (logistics, warehousing etc.) by partnering with local sellers/vendors.</li>
+                            <li>With this model through data analysis, helps the business owners to take data-driven business
+                                decisions.</li>
+                        </ul>
                     </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="b2b_info_left">
-                        <img style="padding: 20px 0"
-                            src="./assests/b2b2c/Hyperlocal-Marketing-Agency-removebg-preview.png" alt="bulk">
-                    </div>
-
                 </div>
             </div>
+            <div class="col-lg-6">
+                <div class="b2b_info_left">
+                    <img style="padding: 20px 0" src="./assests/b2b2c/Hyperlocal-Marketing-Agency-removebg-preview.png"
+                        alt="bulk">
+                </div>
+
+            </div>
+        </div>
         </div>
     </section>
     <section class="footer pt-5 pb-5">
