--- a/b2b.html
+++ b/b2b.html
@@ -252,13 +252,14 @@
                     <div class="col-lg-6">
                         <div class="b2b_overview_right">
                             <ul class="custom-list">
-                                <li> 
-                                                                    <!-- <i class="fa fa-arrow-right fa-flip" aria-hidden="true"></i> -->
+                                <li>
+                                    <!-- <i class="fa fa-arrow-right fa-flip" aria-hidden="true"></i> -->
                                     Our Ecbee, Ecommerce platform ensures, supports B2B Solutions to customers meeting
                                     their
                                     specific need in their businesses like supply large quantity of raw materials,
                                     components or
-                                    finished goods to be used by other business customers.</li>
+                                    finished goods to be used by other business customers.
+                                </li>
                                 <li>Our platform supports tailor made solutions for B2B Customers, who deals with large
                                     order
                                     volumes, complex contracts in their business with their business partners/customers,
@@ -284,7 +285,8 @@
             </div>
             <div class="b2b_title text-center">
                 <h1>Why ECBEE for B2B Ecommerce Solutions</h1>
-                <p style="text-indent:1rem">One of the challenges faced in B2B is to handle multiple scenario contracts for various needs of the
+                <p style="text-indent:1rem">One of the challenges faced in B2B is to handle multiple scenario contracts
+                    for various needs of the
                     business customers. Our E-commerce platform <br>ensures the contractual obligations are met and the
                     day-to-day operations are carried over with ease and hassle-free business environment.</p>
 
@@ -299,7 +301,8 @@
                 <div class="col-lg-6">
                     <div class="b2b_info_right">
                         <h2>Order Processing</h2>
-                        <p style="text-indent:1rem">Our platform makes sure the orders received are processed in time and the users can
+                        <p style="text-indent:1rem">Our platform makes sure the orders received are processed in time
+                            and the users can
                             efficiently manage the orders with easy and manageable user interface that helps the order
                             processing progress from order received to delivery of goods to the customers in time. The
                             portal which we develop through our E-commerce platform handles repeated orders (from
@@ -316,7 +319,8 @@
                 <div class="col-lg-6">
                     <div class="b2b_info_right">
                         <h2>B2B payment Management</h2>
-                        <p style="text-indent:1rem">Our E-commerce platform allows Business owners to define the payment process for their
+                        <p style="text-indent:1rem">Our E-commerce platform allows Business owners to define the payment
+                            process for their
                             clients. Clients with established credit terms will have the options to raise purchase order
                             without getting directed to the payment process, and also allows the business owners
                             ensuring their clients are not crossing the pre-set credit limits to safeguard the business.
@@ -346,12 +350,145 @@
                 <div class="col-lg-6">
                     <div class="b2b_info_right">
                         <h2>Promotion Management</h2>
-                        <p style="text-indent:1rem">Our E-commerce platform is designed in such a way that the customer can have multiple
+                        <p style="text-indent:1rem">Our E-commerce platform is designed in such a way that the customer
+                            can have multiple
                             promotions for their customers to promote their products or brands. The various types of
                             promotions now available are customer promotion, category promotion, order promotion,
                             product promotion, registration promotion etc. The customer has the preference to come up
                             with their new promotion ideas which can also be implemented through our business compatibly
                             designed E-commerce platform. Options are available for promotion hierarchy and precedence.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-12">
+                    <div class="bombay_hardwares text-center">
+                        <div class="bombay_hardwares_img">
+                            <img style="width:50%" src="./assests/solutions/bombay-removebg-preview.png"
+                                alt="bombay hardwares">
+                        </div>
+                        <div class="bombay_hardwares_content">
+                            <h2 style="color:#6b5e5e">Digital Transformation of 75 years old India’s premier trader for
+                                quality steel tubes &amp; Pipes</h2>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-6">
+                    <div class="b2b_info_left">
+                        <img src="./assests/b2b/customisation_img-removebg-preview.png" alt="customisation">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="b2b_info_right">
+                        <h2>Extensive customization</h2>
+                        <p style="text-indent:1rem">Innovative solutions are provided to list and ease the way of
+                            processing thousands of
+                            products placed by their customers providing innovating solutions with our E-commerce
+                            platform. Now their customers can place their enquires on any of their products with hassle
+                            less operation on our extensive E-commerce platform solution.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="b2b_info_right">
+                        <h2>Extensive enquiry system</h2>
+                        <p style="text-indent:1rem">We have built such an enquiry portal that it can handle any number
+                            of enquires, requesting
+                            for bulk quantities, price negotiations etc., as the steel is a market driven and price
+                            sensitive
+                            business commodity.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="b2b_info_right">
+                        <img style="width:50%" src="./assests/b2b/enquiry_management-removebg-preview.png" alt="Enquiry">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="b2b_info_right">
+                        <h2>Integration with Sales Team</h2>
+                        <p style="text-indent:1rem">Our E-commerce portal solutions ensures all the orders are processed
+                            through the portal to
+                            ensure all the enquires are tracked without leaving behind any unattended enquires and the
+                            enquires are processed with information without any delays.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="b2b_info_right">
+                        <img src="./assests/b2b/intergration-remove.png" alt="intergration">
+                    </div>
+                </div>
+
+                <div class="col-lg-12">
+                    <div class="bombay_hardwares text-center">
+                        <div class="bombay_hardwares_img">
+                            <img style="width:30%" src="./assests/solutions/avonseals-removebg-preview.png" alt="Avon Seals">
+                        </div>
+                        <div class="bombay_hardwares_content">
+                            <h2 style="color:#6b5e5e">Powering India’s largest manufacturer of mechanical seals to
+                                E-commerce environment.
+                                B2B2C Order process</h2>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="b2b_title text-center">
+                    <!-- <h1>Why ECBEE for B2B Ecommerce Solutions</h1> -->
+                    <p style="text-indent:1rem; padding-top: 50px;">Our Ecbee E-commerce platform satisfies the objective of expanding the reach of the
+                        product by empowering the existing dealer network. Our platform provides the solution to
+                        tap the untapped niche markets in many parts of our country by decentralizing the
+                        movement of products from one area to another area, where there is an requirement. Our
+                        solution empowers the dealer network to the highest level.</p>
+    
+                </div>
+
+                <div class="col-lg-6">
+                    <div class="b2b_info_right">
+                        <img style="width:70%" src="./assests/b2b/dealer_empowerment-removebg-preview.png" alt="intergration">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="b2b_info_right">
+                        <h2>Empowering the Dealers</h2>
+                        <p style="text-indent:1rem">By the means of decentralization of movement of products from one place to another place,
+                            we pass the benefit to the entire dealer and distributors network in the B2B2C business
+                            model.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="b2b_info_right">
+                        <h2>GPS / Geography based order allocation</h2>
+                        <p style="text-indent:1rem">Ecbee E-commerce portal, streamlines and process the online placed orders by recognizing
+                            the geographical area from where the orders are placed. Our platform system automatically
+                            allocates the received order to the nearest area distributor, which makes sure the product is
+                            delivered to the customer on time, negating the conventional centralized product pickup
+                            and distribution.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="b2b_info_right">
+                        <img style="width:70%" src="./assests/b2b/Location-Based-Services-removebg-preview.png" alt="location Based">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="b2b_info_right">
+                        <img style="width:70%" src="./assests/b2b//national_wide.webp" alt="location Based">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="b2b_info_right">
+                        <h2>Nationwide network</h2>
+                        <p style="text-indent:1rem">Our E-commerce platform enables a business to have centralized E-commerce system by
+                            strengthening the core of your business by directing the dealers to process the orders
+                            received through our portal thus by having a win-win situation supporting the dealers and
+                            as well as niche customers.
                         </p>
                     </div>
                 </div>
