--- a/contact.html
+++ b/contact.html
@@ -245,7 +245,7 @@
             </div>
             <div class="contact_form">
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-md-5 col-lg-4">
                         <div class="contact_address">
                             <div class="address_list">
                                 <!-- <i class="fa fa-map-marker" aria-hidden="true"></i> -->
@@ -271,7 +271,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-8 border-left py-3">
+                    <div class="col-md-7 border-left py-3">
                         <!-- <h1>Contact form</h1> -->
                         <div class="contact_address">
                             <div class="row">
@@ -366,7 +366,7 @@
                     <div class="useful_links">
                         <h3>Contact Us</h3>
                         <p>23 ,3rd Floor Sai Muthu Siva Apartmetns,<br>
-                            Pasumpon Muthuramalinga Thevar Rd, Nandanam, Chennai,<br>
+                            Pasumpon Muthuramalinga Thevar Rd, Nandanam,<br> Chennai,<br>
                             Tamil Nadu 600035</p>
 
 
