--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
 
     </section>
     <section class="ecommerce_section text-center p-4">
-        <div class="container" data-aos="flip-left">
+        <div class="container" data-aos="flip-left" data-aos-duration="2000">
             <div class="sub_banner_content text-center pt-5 pb-2" data-aos="flip-up">
                 <h4>Unique selling point...</h4>
                 <p>Experience a full-featured development platform with beyond E-commerce capabilities. Get inspired by
@@ -1430,7 +1430,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 pb-5 pb-lg-0">
-                    <div class="footer_links" data-aos="fade-up" data-aos-duration="2000">
+                    <div class="footer_links" data-aos="fade-up" data-aos-duration="1500">
                         <a href="#" class="text-decoration-none d-flex"><img src="./assests/logo.png">
                         </a>
                         <p>ECBEE is all you
@@ -1442,7 +1442,7 @@
                                     aria-hidden="true"></i></a>
                             <a href="https://instagram.com/ecbeeinnovations?igshid=MzRlODBiNWFlZA=="><i
                                     class="fa fa-instagram" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/home?original_referer=https%3A%2F%2Fwww.linkedin.com%2Ffeed%2F"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                             <a href="https://business.whatsapp.com/products/business-platform"><i class="fa fa-whatsapp"
                                     aria-hidden="true"></i></a>
                         </div>
@@ -1491,8 +1491,8 @@
                     <div class="useful_links">
                         <h3>Contact Us</h3>
                         <p>23 ,3rd Floor Sai Muthu Siva Apartmetns,<br>
-                            Pasumpon Muthuramalinga Thevar Rd, Nandanam, Chennai,<br>
-                            Tamil Nadu 600035</p>
+                            Pasumpon Muthuramalinga Thevar Rd, Nandanam,
+                            Chennai,<br> Tamil Nadu 600035</p>
 
 
                         <h4><b>Phone</b>:089257 24999</h4>
@@ -1518,14 +1518,14 @@
             margin: 10,
             nav: true,
             autoplay: true,
-            autoplayTimeout: 1000,
+            autoplayTimeout: 3000,
             autoplayHoverPause: true,
             responsive: {
                 0: {
                     items: 1
                 },
                 600: {
-                    items: 3
+                    items: 2
                 },
                 1000: {
                     items: 4
@@ -1533,12 +1533,12 @@
 
             }
         })</script>
-        <script>$('.sub_owl-carousel').owlCarousel({
+    <script>$('.sub_owl-carousel').owlCarousel({
             loop: true,
             margin: 10,
             nav: true,
             autoplay: true,
-            autoplayTimeout: 1000,
+            autoplayTimeout: 2000,
             autoplayHoverPause: true,
             responsive: {
                 0: {
