--- a/industries.html
+++ b/industries.html
@@ -255,7 +255,7 @@
                 <div class="row">
                     <h4 class="p-4">Industries</h4>
                    
-                    <div class="col-lg-3 pb-4">
+                    <div class="col-4 col-lg-3 pb-4">
                         <div class="industries_info">
                             <div class="industries_img">
                                 <img src="./assests/industries/stationary-removebg-preview.png" alt="stationary">
@@ -266,7 +266,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 pb-4">
+                    <div class="col-4 col-lg-3 pb-4">
                         <div class="industries_info">
                             <div class="industries_img">
                                 <img src="./assests/industries/buildingmaterial-removebg-preview.png" alt="stationary">
@@ -278,7 +278,7 @@
                         </div>
                     </div>
                     
-                    <div class="col-lg-3 pb-4">
+                    <div class="col-4 col-lg-3 pb-4">
                         <div class="industries_info">
                             <div class="industries_img">
                                 <img src="./assests/industries/package-removebg-preview.png" alt="Package">
@@ -289,7 +289,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 pb-4">
+                    <div class="col-4 col-lg-3 pb-4">
                         <div class="industries_info">
                             <div class="industries_img">
                                 <img src="./assests/industries/food-removebg-preview.png" alt="stationary">
@@ -300,7 +300,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 pb-4">
+                    <div class="col-4 col-lg-3 pb-4">
                         <div class="industries_info">
                             <div class="industries_img">
                                 <img src="./assests/industries/food-removebg-preview.png" alt="stationary">
@@ -311,7 +311,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 pb-4">
+                    <div class="col-4 col-lg-3 pb-4">
                         <div class="industries_info">
                             <div class="industries_img">
                                 <img src="./assests/industries/gift-removebg-preview.png" alt="stationary">
@@ -322,7 +322,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 pb-4">
+                    <div class="col-4 col-lg-3 pb-4">
                         <div class="industries_info">
                             <div class="industries_img">
                                 <img src="./assests/industries/handicrafts-removebg-preview.png" alt="stationary">
@@ -333,7 +333,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 pb-4">
+                    <div class="col-4 col-lg-3 pb-4">
                         <div class="industries_info">
                             <div class="industries_img">
                                 <img src="./assests/industries/plasticindustries-removebg-preview.png" alt="Plastic">
@@ -344,7 +344,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 pb-4">
+                    <div class="col-4 col-lg-3 pb-4">
                         <div class="industries_info">
                             <div class="industries_img">
                                 <img src="./assests/industries/organic-removebg-preview.png" alt="stationary">
@@ -355,7 +355,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 pb-4">
+                    <div class="col-4 col-lg-3 pb-4">
                         <div class="industries_info">
                             <div class="industries_img">
                                 <img src="./assests/industries/wedding.png" alt="wedding">
@@ -379,7 +379,7 @@
         <div class="container">
             <h4 class="p-4 text-center">Solutions</h4>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="built_section_carosel_div">
                         <div class="built_section_carosel_div_content">
 
@@ -394,7 +394,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="built_section_carosel_div">
                         <div class="built_section_carosel_div_content">
 
@@ -409,7 +409,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="built_section_carosel_div">
                         <div class="built_section_carosel_div_content">
 
@@ -424,7 +424,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="built_section_carosel_div">
                         <div class="built_section_carosel_div_content">
 
@@ -439,7 +439,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="built_section_carosel_div">
                         <div class="built_section_carosel_div_content">
 
@@ -454,7 +454,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="built_section_carosel_div">
                         <div class="built_section_carosel_div_content">
 
@@ -469,7 +469,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="built_section_carosel_div">
                         <div class="built_section_carosel_div_content">
 
@@ -484,7 +484,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="built_section_carosel_div">
                         <div class="built_section_carosel_div_content">
 
@@ -499,7 +499,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="built_section_carosel_div">
                         <div class="built_section_carosel_div_content">
 
@@ -514,7 +514,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="built_section_carosel_div">
                         <div class="built_section_carosel_div_content">
 
@@ -529,7 +529,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="built_section_carosel_div">
                         <div class="built_section_carosel_div_content">
 
@@ -544,7 +544,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="built_section_carosel_div">
                         <div class="built_section_carosel_div_content">
 
@@ -559,7 +559,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="built_section_carosel_div">
                         <div class="built_section_carosel_div_content">
 
@@ -574,7 +574,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-6 col-lg-4">
                     <div class="built_section_carosel_div">
                         <div class="built_section_carosel_div_content">
 
